# PullGuard

./: .gitignore  CONTRIBUTING.md  README.md  company.yaml  pyproject.toml
.agents/policies/: approval-gates.yaml
.agents/skills/: slop-classifier.md
.agents/workflows/: pr-triage.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: thresholds.yaml
docs/: product.md
prompts/bootstrap/: slop-classifier.md
prompts/heartbeat/: slop-classifier.md
pullguard/: config.py  dashboard.py  director.py  filters.py  github.py  logging.py  main.py  models.py  sampler.py  security.py  store.py  webhook.py
pullguard/agents/: __init__.py  architect.py  base.py  liaison.py  slop_classifier.py
pullguard/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py
pullguard/prompts/: audit_architecture.py  classify_slop.py  write_comment.py
pullguard/templates/: default.yml
server/: README.md
tests/: test_architect.py  test_config.py  test_director.py  test_filters.py  test_github.py  test_liaison.py  test_models.py  test_sampler.py  test_security.py  test_slop_classifier.py  test_store.py  test_webhook.py
tests/fixtures/arch_diffs/: aligned_pr.diff  boundary_violation.diff
tests/fixtures/slop_diffs/: boilerplate_flood.diff  hallucinated_api.diff  missing_error_handling.diff
tests/integration/: test_full_pipeline.py
ui/: README.md
