[project]
name = "pullguard"
version = "0.1.0"
description = "The Anti-Slop PR Sentinel — LLM-powered PR quality analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.25.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30.0",
    "pygithub>=2.0.0",
]

[project.scripts]
pullguard = "pullguard.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]
